[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/main/GameMenu/GameMenu.gd" type="Script" id=1]
[ext_resource path="res://font/VarsityTeam-Bold64.tres" type="DynamicFont" id=2]

[node name="GameMenu" type="ColorRect" groups=[
"uiUpdate",
]]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.223529, 0.223529, 0.223529, 0.745098 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -333.5
margin_top = -312.5
margin_right = 333.5
margin_bottom = 312.5

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 667.0
margin_bottom = 625.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="SaveButton" type="Button" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 154.0
margin_right = 667.0
margin_bottom = 230.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Save"
flat = true

[node name="LoadButton" type="Button" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 234.0
margin_right = 667.0
margin_bottom = 310.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Load"
flat = true

[node name="QuitButton" type="Button" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 314.0
margin_right = 667.0
margin_bottom = 390.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit"
flat = true

[node name="CancelButton" type="Button" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 394.0
margin_right = 667.0
margin_bottom = 470.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Cancel"
flat = true

[node name="SaveGameDialog" type="FileDialog" parent="."]
margin_right = 1225.0
margin_bottom = 662.0
access = 1
filters = PoolStringArray( "*.json" )
current_dir = "user://"
current_path = "user://"

[node name="LoadGameDialog" type="FileDialog" parent="."]
margin_right = 1225.0
margin_bottom = 662.0
window_title = "Datei Ã¶ffnen"
mode = 0
access = 1
filters = PoolStringArray( "*.json" )
current_dir = "user://"
current_path = "user://"
[connection signal="pressed" from="MarginContainer/ColorRect/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/VBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="file_selected" from="SaveGameDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="LoadGameDialog" to="." method="_on_LoadGameDialog_file_selected"]
